Fix active day focus shadow cut off in calendar popup #538

--- a/src/components/ids-date-picker/ids-date-picker.scss
+++ b/src/components/ids-date-picker/ids-date-picker.scss
@@ -90,8 +90,6 @@
 
   .popup-footer {
     @include flex();
-
-    margin-top: 10px;
   }
 
   .popup-btn {
