--- a/src/components/ids-month-view/ids-month-view.scss
+++ b/src/components/ids-month-view/ids-month-view.scss
@@ -280,6 +280,8 @@
 
   .month-view-table {
     @include mt-20();
+
+    margin-bottom: 10px;
   }
 
   td .day-container {
